--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@
     width: 81px; 
     text-align: center;
     background-color: grey;
-    margin: 3px;
+    margin: 1px 3px;
     padding-top: 8px;
     cursor: pointer;
     border-radius: 7px;
@@ -31,6 +31,7 @@
     background-color: black;
     height: 60px;
     margin: 8px;
+    padding-top: 12px;
 }
 
 .but1{
@@ -39,7 +40,10 @@
     margin: 3px;
     padding-top: 8px;
     text-align: center;
+    font-size: larger;
     cursor: pointer;
+    border-radius: 5px;
+    border: solid 2px black;
 }
 
 .but1:hover{
